fix: security hardening, rate limiting, and reliability improvements
- Restrict CORS from wildcard to ALLOWED_ORIGINS env var (Java + Python)
- Add per-user rate limiting (Bucket4j, 3 req/hour) and concurrency guard
- Validate file size (10MB cap), CSV type, and dataset_id UUID format
- Replace SMOTE busy-wait loop with CompletableFuture (no blocked threads)
- Add stream timeout on all LLM calls to prevent hung workflow threads
- Add SupabaseSessionRepository for cross-restart session persistence
- Fix target/target_variable key mismatch (imbalance detection was silently broken)
- Replace print() with logging in recommender.py
- Fix bare except in analyzer.py; remove hardcoded TotalCharges column hack
- Return generic error messages to clients; log full traces server-side
- Add 24h dataset TTL cleanup background thread in Python
- Add ALLOWED_ORIGINS, SUPABASE_URL/KEY, RATE_LIMIT_RPH to render.yaml